[package]
name = "demo-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = "*"
hex = { version = "*", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "*", default-features = false, features = ["derive"] }

[build-dependencies]
gear-wasm-builder = "*"
